# fastapi-demo

./: .env  Dockerfile  Makefile  Readme.md  pyproject.toml  sql_app.db
app/: database.py  main.py
app/auth/: domain.py  routers.py
app/db/: session.py
app/users/: crud.py  models.py  routers.py  schemas.py
migrations/versions/: 76458435cb4c_first_migration.py
tests/: conftest.py
tests/api/v1/: test_users.py
